Fix Button layout bug. Refactor css.

--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -9,18 +9,18 @@
 .homeContentContainer {
     width: 85%;
     max-width: 75rem;
-    height: 60%;
+    height: 50%;
     display: flex;
+    justify-content: space-between;
     flex-wrap: wrap;
     overflow: scroll;
 }
 
 .homeHeader {
     width: 60%;
-    height: 80%;
+    height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
 }
 
 .homeHeading {
@@ -33,7 +33,7 @@
     text-transform: uppercase;
     line-height: clamp(2.5rem, 2.2143rem + 1.4286vw, 3.5rem);
     letter-spacing: 0.04rem;
-    padding-bottom: 2rem;
+    padding-bottom: 4rem;
 }
 
 .homeHeaderSubHeading {
@@ -43,30 +43,23 @@
 }
 
 .homeAside {
-    width: 30rem;
+    width: 25rem;
     height: 100%;
     display: flex;
-    align-items: center;
-}
-
-.trendColContainer {
-    width: 100%;
-    height: 25rem;
-    display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: flex-end;
-    margin-bottom: 3rem;
 }
 
 .trendColHeading {
     font-size: clamp(1.2rem, 0.9143rem + 1.4286vw, 2.2rem);
     text-transform: uppercase;
     letter-spacing: 0.02rem;
-    padding-bottom: 3rem;
+    padding-bottom: 2rem;
 }
 
 .trendColours {
-    width: 85%;
+    width: 100%;
     height: 80%;
     display: flex;
     flex-direction: column;
@@ -87,8 +80,4 @@
     width: 100%;
     justify-content: space-between;
     /* padding-right: 3rem; */
-}
-
-Button {
-    margin-left: 12rem;
 }
